--- a/src/features/Guide/guide.scss
+++ b/src/features/Guide/guide.scss
@@ -4,8 +4,7 @@
 	display: flex;
 	flex-direction: column;
 	text-align: center;
-	padding: var(--spacing) 0;
-	overflow: auto;
+	overflow: hidden;
 
 	.MuiTab-root {
 		&.dark {
@@ -23,6 +22,6 @@
 		flex: 1;
 		display: flex;
 		flex-direction: column;
-		overflow: auto;
+		overflow-y: auto;
 	}
 }
