added Tooltip component, started building out voice order sop

--- a/src/features/Guide/components/SOPs/components/VoiceOrder/voice-order.scss
+++ b/src/features/Guide/components/SOPs/components/VoiceOrder/voice-order.scss
@@ -10,4 +10,45 @@
 		color: #f5f5f5;
 		cursor: pointer;
 	}
+
+	.title {
+		margin-top: 40px;
+		margin-bottom: 20px;
+	}
+
+	section {
+		text-align: left;
+		padding: 0 20px;
+		text-wrap: pretty;
+		margin-bottom: 10px;
+
+		.section-title {
+			font-weight: bolder;
+			margin-bottom: 10px;
+		}
+
+		.identifier {
+			font-weight: bold;
+			margin-right: 5px;
+		}
+
+		.level1,
+		.level2 {
+			display: flex;
+			margin-bottom: 5px;
+		}
+
+		.level1 {
+			margin-left: 10px;
+		}
+
+		.level2 {
+			margin-left: 20px;
+
+			.level2-txt {
+				display: flex;
+				text-wrap: wrap;
+			}
+		}
+	}
 }
