--- a/src/features/Home/home.scss
+++ b/src/features/Home/home.scss
@@ -20,6 +20,8 @@
 	.greeting {
 		position: absolute;
 		top: 10px;
+		text-align: center;
+		margin-bottom: 16px;
 		color: var(--txt-primary);
 	}
 
