--- a/src/features/Guide/components/SOPs/components/VoiceOrder/voice-order.scss
+++ b/src/features/Guide/components/SOPs/components/VoiceOrder/voice-order.scss
@@ -33,7 +33,8 @@
 		}
 
 		.level1,
-		.level2 {
+		.level2,
+		.level3 {
 			display: flex;
 			margin-bottom: 5px;
 		}
@@ -44,6 +45,10 @@
 
 		.level2 {
 			margin-left: 30px;
+		}
+
+		.level3 {
+			margin-left: 40px;
 		}
 	}
 }
