--- a/src/features/Guide/components/SOPs/components/VoiceOrder/voice-order.scss
+++ b/src/features/Guide/components/SOPs/components/VoiceOrder/voice-order.scss
@@ -27,6 +27,10 @@
 			margin-bottom: 10px;
 		}
 
+		.section-subtitle {
+			font-weight: bold;
+		}
+
 		.identifier {
 			font-weight: bold;
 			margin-right: 5px;
