updated link color in voice order sop

--- a/src/features/Guide/components/SOPs/components/VoiceOrder/voice-order.scss
+++ b/src/features/Guide/components/SOPs/components/VoiceOrder/voice-order.scss
@@ -22,6 +22,11 @@
 		text-wrap: pretty;
 		margin-bottom: 10px;
 
+		a {
+			color: steelblue;
+			text-decoration: none;
+		}
+
 		.section-title {
 			font-weight: bolder;
 			margin-bottom: 10px;
