--- a/src/features/Guide/components/SOPs/components/VoiceOrder/voice-order.scss
+++ b/src/features/Guide/components/SOPs/components/VoiceOrder/voice-order.scss
@@ -28,6 +28,14 @@
 			text-decoration: none;
 		}
 
+		.underline {
+			text-decoration: underline;
+		}
+
+		.bold {
+			font-weight: bold;
+		}
+
 		.section-title {
 			font-weight: bolder;
 			margin-bottom: 10px;
