refactored Level 1,2,3, and 4 components, refactored voice order sop

--- a/src/features/Guide/components/SOPs/components/VoiceOrder/voice-order.scss
+++ b/src/features/Guide/components/SOPs/components/VoiceOrder/voice-order.scss
@@ -41,37 +41,37 @@
 			margin-bottom: 10px;
 		}
 
-		.section-subtitle {
-			font-weight: bold;
-		}
+		// .section-subtitle {
+		// 	font-weight: bold;
+		// }
 
-		.identifier {
-			font-weight: bold;
-			margin-right: 5px;
-		}
+		// .identifier {
+		// 	font-weight: bold;
+		// 	margin-right: 5px;
+		// }
 
-		.level-1,
-		.level-2,
-		.level-3,
-		.level-4 {
-			display: flex;
-			margin-bottom: 5px;
-		}
+		// .level-1,
+		// .level-2,
+		// .level-3,
+		// .level-4 {
+		// 	display: flex;
+		// 	margin-bottom: 5px;
+		// }
 
-		.level-1 {
-			margin-left: 15px;
-		}
+		// .level-1 {
+		// 	margin-left: 15px;
+		// }
 
-		.level-2 {
-			margin-left: 30px;
-		}
+		// .level-2 {
+		// 	margin-left: 30px;
+		// }
 
-		.level-3 {
-			margin-left: 40px;
-		}
+		// .level-3 {
+		// 	margin-left: 40px;
+		// }
 
-		.level-4 {
-			margin-left: 60px;
-		}
+		// .level-4 {
+		// 	margin-left: 60px;
+		// }
 	}
 }
