finished voice order sop

--- a/src/components/Level-5/level-5.scss
+++ b/src/components/Level-5/level-5.scss
@@ -1,10 +1,11 @@
-.level-2 {
+.level-5 {
 	display: flex;
 	margin-bottom: 10px;
-	margin-left: 30px;
+	margin-left: 75px;
 
-	.level-2-identifier {
+	.level-5-identifier {
 		font-weight: bold;
+		font-style: italic;
 		margin-right: 5px;
 	}
 }
