--- a/src/features/Guide/components/SOPs/components/VoiceOrder/voice-order.scss
+++ b/src/features/Guide/components/SOPs/components/VoiceOrder/voice-order.scss
@@ -41,37 +41,18 @@
 			margin-bottom: 10px;
 		}
 
-		// .section-subtitle {
-		// 	font-weight: bold;
-		// }
+		.img-container {
+			width: 100%;
+			position: relative;
+			padding-top: 56.25%;
 
-		// .identifier {
-		// 	font-weight: bold;
-		// 	margin-right: 5px;
-		// }
-
-		// .level-1,
-		// .level-2,
-		// .level-3,
-		// .level-4 {
-		// 	display: flex;
-		// 	margin-bottom: 5px;
-		// }
-
-		// .level-1 {
-		// 	margin-left: 15px;
-		// }
-
-		// .level-2 {
-		// 	margin-left: 30px;
-		// }
-
-		// .level-3 {
-		// 	margin-left: 40px;
-		// }
-
-		// .level-4 {
-		// 	margin-left: 60px;
-		// }
+			img {
+				position: absolute;
+				top: 0;
+				left: 0;
+				width: 100%;
+				height: 100%;
+			}
+		}
 	}
 }
