completed circuit order sop

--- a/src/features/Guide/components/SOPs/components/CircuitOrder/circuit.scss
+++ b/src/features/Guide/components/SOPs/components/CircuitOrder/circuit.scss
@@ -41,6 +41,11 @@
 			margin-bottom: 10px;
 		}
 
+		.field-nation {
+			font-weight: bold;
+			color: crimson;
+		}
+
 		.img-container {
 			width: 100%;
 			position: relative;
