--- a/src/features/Guide/components/SOPs/sop.scss
+++ b/src/features/Guide/components/SOPs/sop.scss
@@ -2,6 +2,36 @@
 	height: 100%;
 	display: flex;
 	flex-direction: column;
+	position: relative;
+
+	.back-link {
+		position: absolute;
+		top: 15px;
+		left: 15px;
+		color: var(--txt-primary);
+		cursor: pointer;
+	}
+
+	#voice,
+	#circuit,
+	#voice-cancel,
+	#circuit-cancel {
+		flex: 1;
+		flex-direction: column;
+		padding: 15px 0;
+
+		.title {
+			margin-top: 40px;
+			margin-bottom: 20px;
+		}
+
+		section {
+			text-align: left;
+			padding: 0 20px;
+			text-wrap: pretty;
+			margin-bottom: 10px;
+		}
+	}
 
 	.sop-list {
 		flex: 1;
