--- a/src/components/TextInput/textInput.scss
+++ b/src/components/TextInput/textInput.scss
@@ -6,9 +6,8 @@
 	padding: 5px;
 	align-self: center;
 
-	h6 {
-		margin-left: 7px;
-		margin-bottom: 5px;
+	label {
+		margin-left: 10px;
 	}
 
 	.input-container {
