--- a/src/features/Projects/projects.scss
+++ b/src/features/Projects/projects.scss
@@ -1,14 +1,34 @@
 #projects {
 	width: 100%;
+	display: flex;
+	flex-direction: column;
 	flex: 1;
-	position: relative;
 
-	.logout {
-		width: 50px;
+	.action-container {
+		width: 100%;
 		height: 50px;
-		position: absolute;
-		top: 0;
-		right: 0;
-		background-color: indigo;
+		display: flex;
+		justify-content: flex-end;
+		align-items: center;
+
+		.logout,
+		.view-btn {
+			width: 50px;
+			height: 50px;
+			cursor: pointer;
+		}
+
+		.logout {
+			background-color: indigo;
+		}
+
+		.view-btn {
+			background-color: transparent;
+			border: none;
+		}
+	}
+
+	.content-container {
+		flex: 1;
 	}
 }
