--- a/src/components/Levels/levels.scss
+++ b/src/components/Levels/levels.scss
@@ -6,9 +6,33 @@
 	display: flex;
 	margin-bottom: 15px;
 
-	.identifier {
-		font-weight: bold;
-		margin-right: 5px;
+	.level-txt,
+	.section-subtitle {
+		.identifier {
+			font-weight: bold;
+			margin-right: 5px;
+		}
+	}
+
+	&.checklist {
+		position: relative;
+
+		.checkbox {
+			position: absolute;
+			top: 1.5px;
+			left: 0;
+			padding: 0;
+		}
+
+		.level-txt,
+		.section-subtitle {
+			text-indent: 30px;
+
+			&.done {
+				text-decoration: line-through;
+				text-decoration-color: crimson;
+			}
+		}
 	}
 }
 
@@ -17,6 +41,11 @@
 
 	.section-subtitle {
 		font-weight: bold;
+
+		&.done {
+			text-decoration: line-through;
+			text-decoration-color: crimson;
+		}
 	}
 }
 
