--- a/src/features/Projects/components/Checklist/checklist.scss
+++ b/src/features/Projects/components/Checklist/checklist.scss
@@ -10,6 +10,14 @@
 
 	.checklist-container {
 		height: calc(100vh - 220px);
+		padding: 15px 0;
 		overflow-y: scroll;
+
+		section {
+			text-align: left;
+			padding: 0 20px;
+			text-wrap: pretty;
+			margin-bottom: 10px;
+		}
 	}
 }
