--- a/src/features/Auth/auth.scss
+++ b/src/features/Auth/auth.scss
@@ -13,5 +13,10 @@
 		justify-content: center;
 		align-items: center;
 		padding: 10px 0;
+
+		.error {
+			color: var(--error);
+			text-align: center;
+		}
 	}
 }
