--- a/src/features/Guide/guide.scss
+++ b/src/features/Guide/guide.scss
@@ -19,7 +19,8 @@
 	}
 
 	.tab-data {
-		flex: 1;
+		height: calc(100vh - 166px);
+		// flex: 1;
 		display: flex;
 		flex-direction: column;
 		overflow-y: auto;
