finished account cancellation sop

--- a/src/features/Guide/components/SOPs/sop.scss
+++ b/src/features/Guide/components/SOPs/sop.scss
@@ -15,7 +15,8 @@
 	#voice,
 	#circuit,
 	#voice-cancel,
-	#circuit-cancel {
+	#circuit-cancel,
+	#acct-cancel {
 		flex: 1;
 		flex-direction: column;
 		padding: 15px 0;
