--- a/src/features/Guide/components/Misc/misc.scss
+++ b/src/features/Guide/components/Misc/misc.scss
@@ -15,6 +15,13 @@
 		margin: 15px 0;
 	}
 
+	#num-formatter {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		gap: 10px;
+	}
+
 	&.dark {
 		.MuiDivider-root::before,
 		.MuiDivider-root::after {
