--- a/src/components/Button/button.scss
+++ b/src/components/Button/button.scss
@@ -1,14 +1,29 @@
 .btn {
 	width: 70%;
-	padding: 10px;
+	padding: 10px 45px;
 	border-radius: 20px;
 	border: none;
 	background-color: var(--btn-background);
 	color: var(--home-txt);
 	font-weight: bold;
-	box-shadow: var(--elevation);
+	cursor: pointer;
 
 	&.dialog-btn {
 		width: 30%;
 	}
+
+	&:hover {
+		box-shadow: var(--elevation);
+	}
 }
+
+// @media only screen and (min-width: 600px) {
+// 	.btn {
+// 		box-shadow: none;
+// 		transition: all 0.4s;
+
+// 		&:hover {
+// 			box-shadow: var(--elevation);
+// 		}
+// 	}
+// }
