--- a/src/layouts/MainLayout/main.scss
+++ b/src/layouts/MainLayout/main.scss
@@ -17,6 +17,7 @@
 		flex-shrink: 0;
 		justify-content: center;
 		align-items: center;
+		position: relative;
 		overflow-y: auto;
 		// border: 3px solid orangered;
 	}
