added noteSlice, removed all note realted items from userSlice, added update note fuctionality to noteItem

--- a/src/components/TextInput/textInput.scss
+++ b/src/components/TextInput/textInput.scss
@@ -28,6 +28,10 @@
 			border: none;
 			background-color: transparent;
 			color: var(--txt-primary);
+
+			&.edit-input {
+				color: inherit;
+			}
 		}
 
 		.hide {
